--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "watch": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-sessions": "^1.0.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.3",
