--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "bcrypt": "^3.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.1.0",
     "express": "~4.16.0",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.3",
